[CLC-2948] Fixed iframe resizing by applying 'collapse' classes to rows. Applied style to remove border/background-color from user search results form.

--- a/app/assets/stylesheets/_canvas_course_add_user.scss
+++ b/app/assets/stylesheets/_canvas_course_add_user.scss
@@ -1,4 +1,11 @@
 .cc-page-course-add-user {
   background: $cc-color-white;
   padding: 10px;
+
+  .canvas-form {
+    background: transparent;
+    border: none;
+    padding: 10px 0;
+  }
+
 }
